remove spotify secret (also rotated it), add lots of spotify logic (tests passing), run formatting, add spotify models

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,8 +6,8 @@ play {
 
     http {
         secret {
-            key="QCY?tAnfk?aZ?iwrNwnxIlR6CTf:G3gf:90Latabg@5241AB`R5W:1uDFN];Ik@n"
-            validatingKey="80Pc/92O:5YpNdHHUcJzsYts8p6L`mE4U7MZ<qYq4QaSHPeg3MNK?:Et^cBYC<tJ"
+            key="changeme"
+            key=${?PLAY_APPLICATION_SECRET}
         }
 
         errorHandler = play.api.http.JsonHttpErrorHandler
@@ -22,7 +22,10 @@ app.config = {
     rootUrl="https://streamingswap.com"
 
     spotify {
-        apiUrl = "https://api.spotify.com"
-        authUrl = "https://accounts.spotify.com"
+        apiUrl="https://api.spotify.com"
+        authUrl="https://accounts.spotify.com"
+        clientId="3613fbb9bb664052bd8d16d434cae265"
+        clientSecret="changeme"
+        clientSecret=${?SPOTIFY_CLIENT_SECRET}
     }
 }
