get read for pairing with jason and chris

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -28,4 +28,12 @@ app.config = {
         clientSecret="changeme"
         clientSecret=${?SPOTIFY_CLIENT_SECRET}
     }
+
+    ticketmaster {
+        apiUrl=""
+        authUrl=""
+        clientId="NXB2Gz9GGA4VEobGVKyUKAC7H9bAdIrm"
+        clientSecret="changeme"
+        clientSecret=${?TICKETMASTER_CLIENT_SECRET}
+    }
 }
