more boilerplate additions, bandsintown approved my api access

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -36,4 +36,9 @@ app.config = {
         clientSecret="changeme"
         clientSecret=${?TICKETMASTER_CLIENT_SECRET}
     }
+
+    bandsInTown {
+        apiUrl="https://rest.bandsintown.com"
+        appId=${?BANDSINTOWN_CLIENT_SECRET}
+    }
 }
