result of where jason, christian, and i got in our session

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -39,6 +39,7 @@ app.config = {
 
     bandsInTown {
         apiUrl="https://rest.bandsintown.com"
+        appId="changeme"
         appId=${?BANDSINTOWN_CLIENT_SECRET}
     }
 }
